--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -13,7 +13,7 @@ blockquote:before, blockquote:after, q:before, q:after { content: ''; content: n
 table { border-collapse: collapse; border-spacing: 0; }
 
 /*css reset end*/
-/*add to CSS.*/
+/*add to CSS..*/
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
 
 audio, canvas, video { display: inline-block; }
