--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -17,7 +17,7 @@ $fontStyle:'Signika', Verdana, Geneva, arial, sans-serif;
 @mixin box-sizing($type:border-box) {
   -webkit-box-sizing: $type; // Android < 2.3, iOS < 4
      -moz-box-sizing: $type; // Firefox < 29
-          box-sizing: $type; // Chrome, IE 8+, Opera, Safari 5.1
+          box-sizing: $type; // Chrome, IE 8+, Opera,8 Safari 5.1
 }
 
 
