--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -796,6 +796,20 @@ html[xmlns] .clearfix { display: block; }
 }
 /*end of wrapper*/
 
+@media (max-width: 1920px){
+    #wrapper{
+        width:85%;
+    }
+}
+
+@media (max-width: 1280px){
+    
+    #wrapper{
+        width:85%;
+    }
+    
+}
+
 /* Tablets */
 @media (max-width: 1024px){
 
