--- a/styles/style.scss
+++ b/styles/style.scss
@@ -549,14 +549,7 @@ html[xmlns] .clearfix {
                     height:35px;
                     font-size:1em;
                 }
-                input[type="submit"]{
-                    width: 123px;
-                    height: 35px;
-                    margin: 5px 0px 0px 17%;
-                    color:$color;
-                    font-family:($fontStyle) ;
-                    line-height:0;
-                }
+          
                 textarea{
                     width:100%;
                     font-size:1em;
@@ -572,7 +565,7 @@ html[xmlns] .clearfix {
                     text-indent:1%;
                 }
                 input[type="submit"]{
-                    width: 20%;
+                    width: 25%;
                     height: 35px;
                     margin: 0;
                     font-family:($fontStyle) ;
@@ -580,6 +573,7 @@ html[xmlns] .clearfix {
                     font-size:1em;
                     @include gradient(#FC7D3C, #EE2A26);
                     color:$color;
+                    @include rounded(5px);
                     &:hover{
                         @include gradient(#EE2A26, #FC7D3C);
                         font-weight:bold;
@@ -6026,8 +6020,8 @@ html[xmlns] .clearfix {
         }
 
         section#apDiv1 {
-            width: 87.949%;
-            left: 10%;
+            width: 93.949%;
+            left: 5%;
 
             h1{
                 height:50px;
@@ -6146,7 +6140,7 @@ html[xmlns] .clearfix {
                         padding-left:1%;
                         height: 60px;
                         h1 {
-                            font-size:1.8em;
+                            font-size:1.7em;
                             margin-left:1%;
                             span{
                                 font-size:1.15em;
@@ -6356,7 +6350,7 @@ html[xmlns] .clearfix {
                         .special_price {
                             padding:7%;
                             width: 50%;
-                            font-size: 1.5em;
+                            font-size: 1.4em;
                             span{
                                 font-size:45%;
                                 display:block;
@@ -6391,7 +6385,7 @@ html[xmlns] .clearfix {
 
                         p.special1{
                             width:94.44444%;
-                            font-size: 0.7em;
+                            font-size: 0.65em;
                             line-height:1.5em;
 
                         }
@@ -7118,7 +7112,7 @@ html[xmlns] .clearfix {
                         .special_price {
                             padding:7%;
                             width: 55%;
-                            font-size: 1.5em;
+                            font-size: 1.4em;
                             span{
                                 font-size:45%;
                                 display:block;
@@ -7875,7 +7869,7 @@ html[xmlns] .clearfix {
                         .special_price {
                             padding:7%;
                             width: 55%;
-                            font-size: 1.5em;
+                            font-size: 1.4em;
                             span{
                                 font-size:45%;
                                 display:block;
@@ -8642,7 +8636,7 @@ html[xmlns] .clearfix {
                         .special_price {
                             padding:7%;
                             width: 55%;
-                            font-size: 1.5em;
+                            font-size: 1.4em;
                             span{
                                 font-size:45%;
                                 display:block;
@@ -9175,11 +9169,12 @@ html[xmlns] .clearfix {
                 button[type="button"]{
                     display: block;
                     color: $color;
+                    background-color:$color7;
                     height:100%;
                     &:hover{
-                        background-color:$color;
-                        color:$color7;
-                        font-size:90%;
+                        background-color:$color8;
+                        color:$color;
+                        font-size:0.9em;
                     }
                 }
             }
