tidy up css - html

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -30,8 +30,8 @@ unless specified. --}}
     <!-- jsDelivr CDN -->
 
     <script>
-      //var elem = new Foundation.ResponsiveMenu("#primary_nav");
-      //$('#primary_nav').foundation('toggle');
+      var elem = new Foundation.ResponsiveMenu("#primary_nav");
+      $("#primary_nav").foundation("toggleMenu");
     </script>
     <!--Fallback to local -->
     <script src="{{root}}assets/js/app.js"></script>
