tidy up css -html -js

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,14 +1,14 @@
-$color:#FFFFFF;
-$color1:#33CCFF;
-$color2:#6ccff7;
-$color3:#3399CC;
-$color15:#06F;
-$color4:#cccccc;
-$color5:#999999;
-$color6:#666;
-$color7:#000000;
-$color8:#303836;
-$color9:#FFCC33;
-$color11:#fc773c;
-$color13:#EF3528;
-$color14:#185F79;
+$color: #ffffff;
+$color1: #33ccff;
+$color2: #6ccff7;
+$color3: #3399cc;
+$color15: #06f;
+$color4: #cccccc;
+$color5: #999999;
+$color6: #666;
+$color7: #000000;
+$color8: #303836;
+$color9: #ffcc33;
+$color11: #fc773c;
+$color13: #ef3528;
+$color14: #185f79;
